a few temporary changes to fix the css grid layout issues. most of these changes need to be reverted back when implementaing a better grid layout system.

--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -3,6 +3,7 @@
 
 .header,
 .hero-header {
+  grid-area: hero-header;
   display: flex;
   align-items: center;
   align-content: center;
