--- a/src/styles/components/hero-container.scss
+++ b/src/styles/components/hero-container.scss
@@ -2,7 +2,17 @@
 @import "../colours";
 
 .hero-container {
-  margin: $global-margin;
-  padding: $global-padding;
-  background-color: $colour-seashell-grey;
+  grid-area: hero-container;
+  
+  display: grid;
+  grid-template-columns: auto 64rem auto;
+
+  & > section:first-child {
+    grid-column-start: 2;
+
+    // margin: $global-margin;
+    margin: $global-margin $global-margin / 2;
+    padding: $global-padding;
+    background-color: $colour-seashell-grey;
+  }
 }
