--- a/src/styles/components/tile.scss
+++ b/src/styles/components/tile.scss
@@ -9,7 +9,7 @@ $size: 15rem;
   position: relative;
   background-color: $colour-uniprot-blue;
   display: inline-block;
-  margin: $global-margin;
+  margin: 0.5rem;
   text-align: center;
   color: $colour-white;
   width: $size;
